@@ -3,4 +3,6 @@ MANIFEST
 Makefile.PL
 README
 lib/Crypt/RandPasswd.pm
-test.pl
+t/01-word.t
+t/02-letters.t
+t/03-chars.t
